...
          ),
        }}
      />
      <Tabs.Screen
        name="create-order"
        options={{
          title: 'Novo Pedido',
          tabBarIcon: ({ color, focused }) => (
            <Ionicons name={focused ? 'add-circle' : 'add-circle-outline'} size={22} color={color} />
          ),
        }}
      />
      <Tabs.Screen
...
